--- a/main.html
+++ b/main.html
@@ -2,17 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>I'm not a robot</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main>
-      <!-- solution start -->
-      
-      <!-- solution end -->
+      <h3 id="h">Please click on the identical tiles to verify that you are not a robot.</h3>
+      <div class="flex" id="images"></div>
+
+      <div class="flex">
+        <button id="reset" style="display:none;">Reset</button>
+        <button id="verify" style="display:none;">Verify</button>
+      </div>
+
+      <p id="para"></p>
     </main>
     <script src="./script.js"></script>
   </body>
 </html>
+  
